--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "files",
   "version": "1.0.0",
-  "description": "",
   "main": "step1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "joshua",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "fs": "^0.0.1-security",
+    "process": "^0.11.10"
+  }
 }
